--- a/www/css/main.css
+++ b/www/css/main.css
@@ -162,8 +162,11 @@ a {
 }
 
 video.videomin {
-    width: 100%;
-    height: 50vh;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
 }
 
 .listcursos {
@@ -944,6 +947,11 @@ div#msjconf {
     text-align: center;
     font-family: 'MontserratBold';
     font-size: 12px;
+    opacity: .5;
+}
+
+.btotonbotom.activo {
+    opacity: 1;
 }
 
 .btotonbotom {
@@ -1253,6 +1261,38 @@ span.rs-tooltip.rs-tooltip-text.edit {
     color: #FFF;
     text-align: center;
 }
+
+
+.checkB label {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	padding-left: 25px; /* 10 px padding right + 15px input type*/
+	margin-right: 10px; /* margin between inputs types */
+}
+	
+.checkB label:before {  
+	content: "";
+	width: 15px;
+	height: 15px;
+	position: absolute;  
+	left: 0;
+}
+	
+.checkB input[type=checkbox] {  
+	display: none;  
+}
+	
+.checkB label:before {
+	background: url('img/checkbox-tilde.png') left center no-repeat;
+	background-size: cover;
+    margin-top: 2px;
+}
+	
+.checkB input[type=checkbox]:checked + label:before {  
+	background: url('img/checkbox.png') left center no-repeat;  
+} 
+	
 
 .boxcuponre {
     font-family: 'MontserratMedium';
