--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -20,6 +20,8 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <resource-file src="www/google-services.json" target="google-services.json" />
+    <resource-file src="google-services.json" target="app/google-services.json" />
+    <resource-file src="google-services.json" target="google-services.json" />
     <icon density="ldpi" src="www/res/icon/android/drawable-ldpi-icon.png" />
     <icon density="mdpi" src="www/res/icon/android/drawable-mdpi-icon.png" />
     <icon density="hdpi" src="www/res/icon/android/drawable-hdpi-icon.png" />
@@ -42,7 +44,7 @@
     <preference name="loglevel" value="DEBUG" />
     <preference name="DisallowOverscroll" value="true" />
     <preference name="android-minSdkVersion" value="19" />
-    <preference name="phonegap-version" value="cli-9.0.0" />
+    <preference name="phonegap-version" value="cli-7.1.0" />
     <preference name="pgb-builder-version" value="1" />
     <preference name="orientation" value="portrait" />
     <preference name="android-targetSdkVersion" value="27" />
